# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import authRouter from "./auth";
+import classesRouter from "./classes";
+import studentsRouter from "./students";
+import adminRouter from "./admin";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use("/auth", authRouter);
+router.use("/classes", classesRouter);
+router.use("/students", studentsRouter);
+router.use("/admin", adminRouter);
 
 export default router;
